Much of the code is now a collection of lookups

--- a/shorthand_editor.html
+++ b/shorthand_editor.html
@@ -50,7 +50,7 @@
 <div id="svg_viewer" class="viewer"></div>
 <script type="text/javascript" src="point.js"></script>
 <script type="text/javascript" src="char.js"></script>
-<script type="text/javascript" src="waseda.js"></script>
+<script type="text/javascript" src="table.js"></script>
 <script type="text/javascript" src="interpreter.js"></script>
 <script type="text/javascript" src="shorthand_editor.js"></script>
 <script type="text/javascript" src="dialog-polyfill/dialog-polyfill.js"></script>
